# STIL-Gazebo-Iris-Pendulum

./: MissionPlugin.cc  README.md  log.csv  log.txt  log_px4.csv
Post Processing/: README  editPlotLimits.m  log.csv  log_px4.csv  plotter.m  saveFigureAsPDF.m
Post Processing/Data/: log_px4_sls.csv  log_sls.csv  setpoint1_data.csv  setpoint2_data.csv  setpoint3_data.csv  trajectory_data.csv
iris_pendulum/: model.sdf
models/iris_pendulum/: model.config
models/simple_drone_with_payload/: model.config  model.sdf
plugins/: CMakeLists.txt  MissionPlugin.cc  gazebo_wind_plugin.cpp  gazebo_wind_plugin.h
plugins/StabController/: StabController.cpp  StabController.h
worlds/: pendulum_sim.world  windy.world
